  deprecated
- Fixed asyncore main loop to respect non-default timer resolution
- Fixed `.setTimerResolution()` behaviour of abstract main loop dispatcher
  to update call intervals of the existing periodic dispatcher jobs
- Fixed `var-bindings` initialization to prevent pyasn1 encoder failures
  with newer pyasn1 versions where `SequenceOf` type looses its default
  initializer.

Revision 4.4.9, released 2019-02-09
-----------------------------------
- Made MIB loader ignoring file and directory access errors
- Added missing SNMP PDU error classes and their handling in Command Responder
- Fixed crash on MIB load failure in case of directory access error
- Fixed socket transparency option (IPV6_TRANSPARENT) to make IPv6
  transparent operation functional

Revision 4.4.8, released 2018-12-30
-----------------------------------

- Fixed Pythonized MIB load (in the source form) - made sure to turn
  it into a code object prior to its execution

Revision 4.4.7, released 2018-12-29
-----------------------------------

- Copyright notice extended to the year 2019
- Exposed ASN.1 `Null` type through `rfc1902` module for convenience.
- Use `compile()` before `exec`'ing MIB modules to attach filename to
  the stack frames (ultimately shown in traceback/debugger)
- Fixed hlapi/v3arch transport target caching to ensure transport targets
  are different even if just timeout/retries options differ
- Fixed hlapi LCD configurator to include `contextName`. Prior to this fix
  sending SNMPv3 TRAP with non-default `contextName` would fail.
- Fixed possible duplicate key occurrence in the `OrderedDict` following
  a race condition
- Fixed undefined name references in `inet_pton`/`inet_ntop` substitute
  routines for IPv6 in `TRANSPORT-ADDRESS-MIB.py`

Revision 4.4.6, released 2018-09-13
-----------------------------------

- Improved package build and dependency tracking
- Fixed missing LICENSE from the tarball distribution