@@ -110,6 +110,8 @@ Revision 4.4.10, released 2019-04-XX
 - Fixed `var-bindings` initialization to prevent pyasn1 encoder failures
   with newer pyasn1 versions where `SequenceOf` type looses its default
   initializer.
+- Fixed crash on uninitialized component serialization left out in
+  SNMP v1 TRAP PDU to SNMPv2/3 TRAP PDU proxy translation routine.
 
 Revision 4.4.9, released 2019-02-09
 -----------------------------------
